--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "yiisoft/yii2-bootstrap4": "^2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "kartik-v/yii2-icons": "dev-master",
-        "xtetis/yii2-bootstrap4-glyphicons": "dev-master"
+        "xtetis/yii2-bootstrap4-glyphicons": "dev-master",
+        "yiisoft/yii2-imagine": "^2.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
