--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         "yiisoft/yii2-bootstrap4": "^2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "kartik-v/yii2-icons": "dev-master",
-        "xtetis/yii2-bootstrap4-glyphicons": "dev-master",
         "yiisoft/yii2-imagine": "^2.2",
         "kartik-v/yii2-datecontrol": "dev-master",
         "kartik-v/yii2-widget-datetimepicker": "@dev",
         "kartik-v/yii2-widget-timepicker": "@dev",
         "fedemotta/yii2-aws-sdk": "^2.0",
         "aws/aws-php-sns-message-validator": "^1.6",
-        "cache/doctrine-adapter": "^1.0"
+        "cache/doctrine-adapter": "^1.0",
+        "rmrevin/yii2-fontawesome": "^3.6"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
