--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "fedemotta/yii2-aws-sdk": "^2.0",
         "aws/aws-php-sns-message-validator": "^1.6",
         "cache/doctrine-adapter": "^1.0",
-        "rmrevin/yii2-fontawesome": "^3.6"
+        "rmrevin/yii2-fontawesome": "^3.6",
+        "kartik-v/yii2-password": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
