--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "aws/aws-php-sns-message-validator": "^1.6",
         "cache/doctrine-adapter": "^1.0",
         "rmrevin/yii2-fontawesome": "^3.6",
-        "kartik-v/yii2-password": "dev-master"
+        "kartik-v/yii2-password": "dev-master",
+        "joni-jones/yii2-heroku-logger": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -57,7 +58,8 @@
         "phpoffice/phpspreadsheet": "^1.1",
         "symfony/dotenv": "^4.0",
         "knplabs/github-api": "^2.11",
-        "php-http/guzzle6-adapter": "^1.1"
+        "php-http/guzzle6-adapter": "^1.1",
+        "kartik-v/yii2-password": "dev-master"
     },
     "config": {
         "process-timeout": 1800,
@@ -77,13 +79,11 @@
     },
     "extra": {
         "yii\\composer\\Installer::postCreateProject": {
-            "setPermission": [
-                {
-                    "runtime": "0777",
-                    "web/assets": "0777",
-                    "yii": "0755"
-                }
-            ]
+            "setPermission": [{
+                "runtime": "0777",
+                "web/assets": "0777",
+                "yii": "0755"
+            }]
         },
         "yii\\composer\\Installer::postInstall": {
             "generateCookieValidationKey": [
@@ -91,8 +91,7 @@
             ]
         }
     },
-    "repositories": [
-        {
+    "repositories": [{
             "type": "composer",
             "url": "https://asset-packagist.org"
         },
