--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,3 +2,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
+php_value upload_max_filesize 8 M
+php_value post_max_size 8 M
