Cambio .htaccess para mas pruebas

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,3 +4,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
 php_value upload_max_filesize 8M
 php_value post_max_size 8M
+max_execution_time = 300
+max_input_time = 300
