--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
-php_value upload_max_filesize 8M
-php_value post_max_size 8M
+upload_max_filesize 8M
+post_max_size 8M
 max_execution_time = 300
 max_input_time = 300
